--- a/SMS_Presentation/App_Start/SMS_Mensagens.resx
+++ b/SMS_Presentation/App_Start/SMS_Mensagens.resx
@@ -189,6 +189,12 @@
   <data name="M0041" xml:space="preserve">
     <value>Conta bancária já cadastrada</value>
   </data>
+  <data name="M0042" xml:space="preserve">
+    <value>Filial já cadastrada</value>
+  </data>
+  <data name="M0043" xml:space="preserve">
+    <value>Não é possível excluir essa Filial. Existem informações vinculadas a ela</value>
+  </data>
   <data name="M0051" xml:space="preserve">
     <value>Falha no envio do SMS</value>
   </data>
