--- a/SMS_Presentation/App_Start/SMS_Mensagens.resx
+++ b/SMS_Presentation/App_Start/SMS_Mensagens.resx
@@ -237,6 +237,12 @@
   <data name="M0053" xml:space="preserve">
     <value>Não é possível excluir essa transportadora. Existem informações vinculadas a ela</value>
   </data>
+  <data name="M0054" xml:space="preserve">
+    <value>Produto já cadastrado</value>
+  </data>
+  <data name="M0055" xml:space="preserve">
+    <value>Não é possível excluir esse produto. Existem informações vinculadas a ele</value>
+  </data>
   <data name="M0058" xml:space="preserve">
     <value>Tarefa ja cadastrada</value>
   </data>
