--- a/SMS_Presentation/App_Start/SystemBR_Resource.resx
+++ b/SMS_Presentation/App_Start/SystemBR_Resource.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -144,155 +144,208 @@
   <data name="M0009" xml:space="preserve">
     <value>A nova senha nao foi confirmada corretamente</value>
   </data>
+  <data name="M0010" xml:space="preserve">
+    <value>Sua pesquisa não retornou nenhum resultado - Tente outras opções de pesquisa</value>
+  </data>
   <data name="M0011" xml:space="preserve">
-    <value>Você não tem acesso a essa funcionalidade</value>
+    <value>Codigo do banco ja existente</value>
   </data>
   <data name="M0012" xml:space="preserve">
-    <value>Usuário cadastrado mas sem acesso ao sistema. Consulte a administração.</value>
+    <value>Este banco ja contem contas vinculadas. Impossivel ser excluido.</value>
   </data>
   <data name="M0013" xml:space="preserve">
-    <value>Data de conclusão inferior a data de cadastro</value>
+    <value>Conta bancaria ja cadastrada</value>
+    <comment>CONTA_BANCO</comment>
   </data>
   <data name="M0014" xml:space="preserve">
-    <value>Data de conclusão maior que a data corrente</value>
+    <value>Impossivel excluir esta conta. Existem lancamentos de CONTAS A PAGAR vinculados a ela</value>
+  </data>
+  <data name="M0015" xml:space="preserve">
+    <value>Impossivel excluir esta conta. Existem lancamentos de CONTAS A RECEBER vinculados a ela</value>
   </data>
   <data name="M0016" xml:space="preserve">
-    <value>Nenhum registro atendeu ao filtro especificado</value>
+    <value>Filial ja cadastrada</value>
+    <comment>FILIAL</comment>
+  </data>
+  <data name="M0017" xml:space="preserve">
+    <value>Impossivel excluir essa filial. Existem registros vinculados a ela</value>
+  </data>
+  <data name="M0018" xml:space="preserve">
+    <value>Cliente ja cadastrado</value>
+    <comment>CLIENTE</comment>
   </data>
   <data name="M0019" xml:space="preserve">
-    <value>Nenhum arquivo selecionado</value>
+    <value>Impossivel excluir esse cliente. Existem registros vinculados a ele.</value>
   </data>
   <data name="M0020" xml:space="preserve">
-    <value>Extensão de arquivo não suportada</value>
+    <value>Fornecedor ja cadastrado</value>
+    <comment>FORNECEDOR</comment>
+  </data>
+  <data name="M0021" xml:space="preserve">
+    <value>Impossivel excluir esse fornecedor. Existem registros vinculados a ele.</value>
+  </data>
+  <data name="M0022" xml:space="preserve">
+    <value>Produto ja cadastrado</value>
+    <comment>PRODUTO</comment>
+  </data>
+  <data name="M0023" xml:space="preserve">
+    <value>Impossivel excluir esse produto. Existem registros vinculados a ele.</value>
   </data>
   <data name="M0024" xml:space="preserve">
-    <value>Nome do arquivo muito longo</value>
+    <value>Materia prima ja cadastrada</value>
+    <comment>MATERIA_PRIMA</comment>
+  </data>
+  <data name="M0025" xml:space="preserve">
+    <value>Impossivel excluir essa materia prima. Existem registros vinculados a ele.</value>
   </data>
   <data name="M0026" xml:space="preserve">
-    <value>Fornecedor já cadastrado</value>
+    <value>Servico ja cadastrado</value>
+    <comment>SERVICO</comment>
   </data>
   <data name="M0027" xml:space="preserve">
-    <value>Não é possível excluir esse fornecedor. Existem informações vinculadas a ele</value>
+    <value>Impossivel excluir esse serviço. Existem registros vinculados a ele.</value>
   </data>
   <data name="M0028" xml:space="preserve">
-    <value>Telefone já cadastrado</value>
+    <value>Transportadora ja cadastrada</value>
+    <comment>TRANSPORTADORA</comment>
   </data>
   <data name="M0029" xml:space="preserve">
-    <value>Cliente já cadastrado</value>
+    <value>Impossivel excluir essa transportadora, Existem registros vinculados a ela.</value>
   </data>
   <data name="M0030" xml:space="preserve">
-    <value>Não é possível excluir esse cliente. Existem informações vinculadas a ele</value>
+    <value>Item de patrimonio ja cadastrado</value>
+    <comment>ITEM_PATRIMONIO</comment>
+  </data>
+  <data name="M0031" xml:space="preserve">
+    <value>Equipamento ja cadastrado</value>
+    <comment>EQUIPAMENTO</comment>
+  </data>
+  <data name="M0032" xml:space="preserve">
+    <value>Cargo ja cadastrado</value>
+    <comment>CARGO</comment>
+  </data>
+  <data name="M0033" xml:space="preserve">
+    <value>Impossivel excluir esse cargo, Existem registros vinculados a ele.</value>
+  </data>
+  <data name="M0034" xml:space="preserve">
+    <value>Valor/Tipo de comissão já cadastrado</value>
+    <comment>VALOR_COMISSAO, TIPO_COMISSAO</comment>
+  </data>
+  <data name="M0035" xml:space="preserve">
+    <value>Impossivel excluir esse tipo/valor de comissão. Existem registros vinculados a ele.</value>
   </data>
   <data name="M0036" xml:space="preserve">
-    <value>Centro de Custo já cadastrado. Já existem um centro de custo com os mesmos grupo, subgrupo e número.</value>
+    <value>Formato invalido para foto, Deve ser JPG, GIF ou PNG</value>
   </data>
   <data name="M0037" xml:space="preserve">
-    <value>Não é possível excluir esse centro de custo. Existem informações vinculadas a ele</value>
+    <value>Contrato ja cadastrado</value>
+    <comment>CONTRATO</comment>
   </data>
   <data name="M0038" xml:space="preserve">
-    <value>Banco já cadastrado</value>
+    <value>Impossivel excluir esse contrato. Existem registros vinculados a ele.</value>
   </data>
   <data name="M0039" xml:space="preserve">
-    <value>Não é possível excluir esse banco. Existem informações vinculadas a ele</value>
+    <value>Solicitacao de aprovacao enviada</value>
   </data>
   <data name="M0040" xml:space="preserve">
-    <value>Não é possível excluir essa conta bancária. Existem informações vinculadas a ela</value>
+    <value>Contrato cancelado</value>
   </data>
   <data name="M0041" xml:space="preserve">
-    <value>Conta bancária já cadastrada</value>
+    <value>O nome do arquivo anexado não pode ser maior que 100 caracteres</value>
   </data>
   <data name="M0042" xml:space="preserve">
-    <value>Filial já cadastrada</value>
+    <value>Contrato nao aprovado</value>
   </data>
   <data name="M0043" xml:space="preserve">
-    <value>Não é possível excluir essa Filial. Existem informações vinculadas a ela</value>
+    <value>O contrato nao esta na fase OPERAÇÃO</value>
   </data>
   <data name="M0044" xml:space="preserve">
-    <value>Grupo já cadastrado</value>
+    <value>E-mail enviado com sucesso</value>
   </data>
   <data name="M0045" xml:space="preserve">
-    <value>Não é possível excluir esse grupo. Existem informações vinculadas a ele</value>
+    <value>Impossivel excluir esse item de tabela auxiliar. existem registros vinculados a ele.</value>
   </data>
   <data name="M0046" xml:space="preserve">
-    <value>SubGrupo já cadastrado</value>
+    <value>Template ja cadastrado</value>
+    <comment>TEMPLATE</comment>
   </data>
   <data name="M0047" xml:space="preserve">
-    <value>Não é possível excluir esse Subgrupo. Existem informações vinculadas a ele</value>
+    <value>Impossivel excluir esse lancamento de conta a receber. existem registros vinculados a ele.</value>
   </data>
   <data name="M0048" xml:space="preserve">
-    <value>Equipamento já cadastrado</value>
+    <value>A data nao pode ser maior do que a data corrente</value>
   </data>
   <data name="M0049" xml:space="preserve">
-    <value>Não é possível excluir esse equipamento. Existem informações vinculadas a ele</value>
+    <value>A soma das parcelas nao bate com o valor total informado</value>
   </data>
   <data name="M0050" xml:space="preserve">
-    <value>Transportadora já cadastrada</value>
+    <value>Um lancamento parcelado nao pode ter pagamento parcial</value>
   </data>
   <data name="M0051" xml:space="preserve">
-    <value>Falha no envio do SMS</value>
+    <value>O valor do pagamento parcial nao pode ser maior que o valor do lancamento</value>
   </data>
   <data name="M0052" xml:space="preserve">
-    <value>SMS enviado com sucesso</value>
+    <value>Valor parcial igual ao valor do lancamento. Va para liquidacao de lancamento ao inves de pagamento parcial</value>
   </data>
   <data name="M0053" xml:space="preserve">
-    <value>Não é possível excluir essa transportadora. Existem informações vinculadas a ela</value>
+    <value>A data de inicio nao pode ser menor que a data corrente</value>
   </data>
   <data name="M0054" xml:space="preserve">
-    <value>Produto já cadastrado</value>
+    <value>O numero de parcelas nao pode ser menor do que 2</value>
   </data>
   <data name="M0055" xml:space="preserve">
-    <value>Não é possível excluir esse produto. Existem informações vinculadas a ele</value>
+    <value>Impossivel liquidar direto um lançamento parcelado. As parcelas devem ser liquidadas uma a uma.</value>
   </data>
   <data name="M0056" xml:space="preserve">
-    <value>Não é possível excluir essa forma de pagamento. Existem informações vinculadas a ela</value>
+    <value>Impossivel fazer pagamento parcial de um lancamento parcelado</value>
   </data>
   <data name="M0057" xml:space="preserve">
-    <value>Conta a Pagar já cadastrada</value>
+    <value>Impossivel parcelar um lancamento com pagamento parcial</value>
   </data>
   <data name="M0058" xml:space="preserve">
     <value>Tarefa ja cadastrada</value>
+    <comment>TAREFA</comment>
   </data>
   <data name="M0059" xml:space="preserve">
-    <value>Não é possível excluir esse lançamento de conta a pagar. Existem informações vinculadas a ele</value>
+    <value>Data de encerramento da tarefa menor que a data de inicio</value>
   </data>
   <data name="M0060" xml:space="preserve">
-    <value>Data de inicio de parcelamento menor que a data corrente</value>
+    <value>Data de encerramento da tarefa maior que a data corrente</value>
   </data>
   <data name="M0061" xml:space="preserve">
-    <value>Numero de parcelas menor do que 2</value>
+    <value>Impossivel compartilhar tarefa com o proprio usuario</value>
   </data>
   <data name="M0062" xml:space="preserve">
-    <value>Pagamento recorrente não pode ser parcelado</value>
+    <value>Pedido de compra ja cadastrado</value>
+    <comment>COMPRA</comment>
   </data>
   <data name="M0063" xml:space="preserve">
-    <value>Já existe uma conta bancária definida como conta principal. Não pode haver duas contas nessa situação.</value>
+    <value>Impossivel excluir este pedido pois existem registros vinculados a ele</value>
   </data>
   <data name="M0064" xml:space="preserve">
-    <value>Data inicial das ocorrências não definida</value>
+    <value>Item de pedido incompleto</value>
   </data>
   <data name="M0065" xml:space="preserve">
-    <value>A data de início do parcelamento deve ser especificada</value>
+    <value>Item de pedido sem valor</value>
   </data>
   <data name="M0066" xml:space="preserve">
-    <value>Data de liquidacao maior que a data corrente</value>
+    <value>Item de pedido sem quantidade</value>
   </data>
   <data name="M0067" xml:space="preserve">
-    <value>Soma dos itens diferente do valor total</value>
+    <value>Item de pedido sem data de cotação</value>
   </data>
   <data name="M0068" xml:space="preserve">
-    <value>Impossivel pagar parcial um lancamento parcelado</value>
-  </data>
-  <data name="M0069" xml:space="preserve">
-    <value>Valor parcial maior que o valor total</value>
+    <value>O cancelamento requer que a justificativa seja preenchida</value>
   </data>
   <data name="M0070" xml:space="preserve">
-    <value>Valor parcial igual ao valor total</value>
+    <value>Pedido de venda ja cadastrado</value>
+    <comment>VENDA</comment>
   </data>
   <data name="M0071" xml:space="preserve">
-    <value>Impossivel liquidar um lancamento parcelado. As parcelas devem ser liquidadas individualmente</value>
+    <value>Atendimento ja cadastrado</value>
   </data>
   <data name="M0072" xml:space="preserve">
-    <value>Impossivel parcelar lancamento com pagamento parcial</value>
+    <value>Impossivel excluir este atendimento pois existem registros vinculados a ele</value>
   </data>
   <data name="M0073" xml:space="preserve">
     <value>A Senha não pode ficar em branco</value>
@@ -304,10 +357,44 @@
     <value>Confirmação da senha não pode ser em branco</value>
   </data>
   <data name="M0076" xml:space="preserve">
-    <value>Valor parcial igual ao valor do lancamento. Va para liquidacao de lancamento ao inves de pagamento parcial</value>
+    <value>Nenhum arquivo selecionado</value>
   </data>
   <data name="M0077" xml:space="preserve">
-    <value>Soma dos percentuais de rateio maior do que 100</value>
+    <value>Funcionario ja cadastrado</value>
+    <comment>FUNCIONARIO</comment>
+  </data>
+  <data name="M0078" xml:space="preserve">
+    <value>Impossivel excluir este funcionario pois existem registros vinculados a ele</value>
+  </data>
+  <data name="M0083" xml:space="preserve">
+    <value>Impossivel excluir este lancamento. Ele esta relacionado com outros registros</value>
+  </data>
+  <data name="M0084" xml:space="preserve">
+    <value>Data de inicio de parcelamento menor que a data corrente</value>
+  </data>
+  <data name="M0085" xml:space="preserve">
+    <value>Numero de parcelas menor do que 2</value>
+  </data>
+  <data name="M0086" xml:space="preserve">
+    <value>Impossivel liquidar um lancamento parcelado. As parcelas devem ser liquidadas individualmente</value>
+  </data>
+  <data name="M0087" xml:space="preserve">
+    <value>Data de liquidacao maior que a data corrente</value>
+  </data>
+  <data name="M0088" xml:space="preserve">
+    <value>Soma dos itens diferente do valor total</value>
+  </data>
+  <data name="M0089" xml:space="preserve">
+    <value>Impossivel pagar parcial um lancamento parcelado</value>
+  </data>
+  <data name="M0090" xml:space="preserve">
+    <value>Valor parcial maior que o valor total</value>
+  </data>
+  <data name="M0091" xml:space="preserve">
+    <value>Valor parcial igual ao valor total</value>
+  </data>
+  <data name="M0092" xml:space="preserve">
+    <value>Impossivel parcelar lancamento com pagamento parcial</value>
   </data>
   <data name="M0093" xml:space="preserve">
     <value>Você tem notificações não lidas até esta data</value>
@@ -315,13 +402,92 @@
   <data name="M0094" xml:space="preserve">
     <value>Você tem tarefas pendentes até esta data</value>
   </data>
+  <data name="M0095" xml:space="preserve">
+    <value>Pagamento recorrente não pode ser parcelado</value>
+  </data>
+  <data name="M0096" xml:space="preserve">
+    <value>Data inicial das ocorrências não definida</value>
+  </data>
+  <data name="M0097" xml:space="preserve">
+    <value>Soma dos percentuais de rateio maior do que 100</value>
+  </data>
+  <data name="M0098" xml:space="preserve">
+    <value>Esse produto é COMPOSTO e não tem Ficha Técnica especificada.</value>
+  </data>
+  <data name="M0099" xml:space="preserve">
+    <value>Tabela de preço já cadastrada para este produto/filial</value>
+  </data>
+  <data name="M0100" xml:space="preserve">
+    <value>Pedido de compra já cadastrado</value>
+    <comment>COMPRA</comment>
+  </data>
+  <data name="M0101" xml:space="preserve">
+    <value>Impossível excluir esse pedido. Existem registros vinculados a ele</value>
+  </data>
+  <data name="M0102" xml:space="preserve">
+    <value>Nenhum item incluído no pedido ou existem itens sem dados de cotação</value>
+  </data>
+  <data name="M0103" xml:space="preserve">
+    <value>Existem itens sem preço no pedido</value>
+  </data>
+  <data name="M0104" xml:space="preserve">
+    <value>Existem itens sem quantidade no pedido</value>
+  </data>
+  <data name="M0105" xml:space="preserve">
+    <value>Existem itens sem data de cotação no pedido</value>
+  </data>
+  <data name="M0106" xml:space="preserve">
+    <value>A justificativa de cancelamento e obrigatória</value>
+  </data>
+  <data name="M0107" xml:space="preserve">
+    <value>A data de início do parcelamento deve ser especificada</value>
+  </data>
+  <data name="M0108" xml:space="preserve">
+    <value>Tabela de preço já cadastrada para este insumo/filial</value>
+  </data>
   <data name="M0109" xml:space="preserve">
     <value>O login não pode ficar em branco</value>
   </data>
   <data name="M0110" xml:space="preserve">
-    <value>E-Mail já cadastrado</value>
+    <value>Produto já cadastrado</value>
+    <comment>PRODUTO</comment>
   </data>
   <data name="M0111" xml:space="preserve">
-    <value>Login já cadastrado</value>
+    <value>Insumo já cadastrado</value>
+    <comment>INSUMO</comment>
+  </data>
+  <data name="M0112" xml:space="preserve">
+    <value>Serviço já cadastrado</value>
+    <comment>SERVICO</comment>
+  </data>
+  <data name="M0113" xml:space="preserve">
+    <value>Transportadora já cadastrada</value>
+    <comment>TRANSPORTADORA</comment>
+  </data>
+  <data name="M0114" xml:space="preserve">
+    <value>Especificar Usuário ou Departamento</value>
+  </data>
+  <data name="M0115" xml:space="preserve">
+    <value>Funcionalidade restrita a administradores</value>
+  </data>
+  <data name="M0116" xml:space="preserve">
+    <value>Grupo já cadastrado</value>
+    <comment>GRUPO</comment>
+  </data>
+  <data name="M0117" xml:space="preserve">
+    <value>Subgrupo já cadastrado</value>
+    <comment>SUBGRUPO</comment>
+  </data>
+  <data name="M0118" xml:space="preserve">
+    <value>Impossível excluir. existem registros vinculados a ele</value>
+  </data>
+  <data name="M0119" xml:space="preserve">
+    <value>Forma de pagamento não informada</value>
+  </data>
+  <data name="M0120" xml:space="preserve">
+    <value>Não há nenhum registro com data de vencimento para a data atual</value>
+  </data>
+  <data name="M0121" xml:space="preserve">
+    <value>Ordem de Serviço já cadastrada</value>
   </data>
 </root>
